# finite-element-solver

./: CMakeLists.txt  README.md  build.sh  data.csv
src/: Simulation.h  arma_config.hpp  main.cpp  qcustomplot.cpp  qcustomplot.h  simulation.cpp  superlu_wrapper.c  superlu_wrapper.h
src/armadillo_bits/: superlu_wrapper.hpp
